--- a/share.html
+++ b/share.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="all.css">
-</head>
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/6a4f655860.js" crossorigin="anonymous"></script></head>
 <body>
     <div class="header">
         <div class="title">
@@ -14,6 +14,7 @@
                 <a href="index.html">和非.費登奎斯＆瑜伽</a>
             </h1>
         </div>
+        <i class="fa-solid fa-bars hamburgerIcon"></i>
         <div class="subTitle">
             <span><a href="class1.html">課程介紹</a></span>
             <span class="pageColor"><a href="share.html">旅程分享</a></span>
