--- a/classOrder.html
+++ b/classOrder.html
@@ -14,18 +14,18 @@
                 <a href="index.html">和非.費登奎斯＆瑜伽</a>
             </h1>
         </div>
-        <i class="fa-solid fa-bars hamburgerIcon"></i>
+        <!-- <i class="fa-solid fa-bars hamburgerIcon"></i> -->
         <div class="subTitle">
             <span><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
-            <span><a href="teacher.html">師資介紹</a></span>
-            <span class="pageColor"><a href="classOrder.html">功能整合預約／課程預約</a></span>
+            <span><a href="teacher.html">關於我</a></span>
+            <span class="pageColor"><a href="classOrder.html">個人化課程預約／課程報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
     </div>
     <div class="classOrderContainer">
         <div class="schoolTimetable">
-            <p>本月課表</p>
+            <p>九月份開放預約時段</p>
             <hr class="pTitleHr">
             <table>
                 <tr>
@@ -36,78 +36,124 @@
                     <td class="dayBorder">ＳＡＴ（六）</td>
                 </tr>
                 <tr>
-                    <td class="topDateColor">01/02</td>
-                    <td class="topDateColor">01/03</td>
-                    <td class="topDateColor">01/04</td>
-                    <td class="topDateColor">01/05</td>
-                    <td class="topDateColor">01/06</td>
+                    <td class="topDateColor">09/03</td>
+                    <td class="topDateColor">09/04</td>
+                    <td class="topDateColor">09/05</td>
+                    <td class="topDateColor">09/06</td>
+                    <td class="topDateColor">09/07</td>
                 </tr>
                 <tr>
-                    <td class="dateContent"></td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent">動中覺察</td>
-                    <td class="dateContent"><p>當天開放預約功能整合</p></td>
-                    <td class="dateContent"><p>當天開放預約功能整合</p></td>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
                 </tr>
                 <tr>
-                    <td class="dateColor leftDashed">01/09</td>
-                    <td class="dateColor">01/10</td>
-                    <td class="dateColor">01/11</td>
-                    <td class="dateColor">01/12</td>
-                    <td class="dateColor">01/13</td>
+                    <td class="dateColor leftDashed">09/10</td>
+                    <td class="dateColor">09/11</td>
+                    <td class="dateColor">09/12</td>
+                    <td class="dateColor">09/13</td>
+                    <td class="dateColor">09/14</td>
                 </tr>
                 <tr>
-                    <td class="dateContent"></td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent">動中覺察</td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent">基礎八隻串連</td>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
                 </tr>
                 <tr>
-                    <td class="dateColor leftDashed">01/16</td>
-                    <td class="dateColor">01/17</td>
-                    <td class="dateColor">01/18</td>
-                    <td class="dateColor">01/19</td>
-                    <td class="dateColor">01/20</td>
+                    <td class="dateColor leftDashed">09/17</td>
+                    <td class="dateColor">09/18</td>
+                    <td class="dateColor">09/19</td>
+                    <td class="dateColor">09/20</td>
+                    <td class="dateColor">09/21</td>
                 </tr>
                 <tr>
-                    <td class="dateContent"><p>當天開放預約功能整合</p></td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent">動中覺察</td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent"></td>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
                 </tr>
                 <tr>
-                    <td class="dateColor leftDashed">01/23</td>
-                    <td class="dateColor">01/24</td>
-                    <td class="dateColor">01/25</td>
-                    <td class="dateColor">01/26</td>
-                    <td class="dateColor">01/27</td>
+                    <td class="dateColor leftDashed">09/24</td>
+                    <td class="dateColor">09/25</td>
+                    <td class="dateColor">09/26</td>
+                    <td class="dateColor">09/27</td>
+                    <td class="dateColor">09/28</td>
                 </tr>
                 <tr>
-                    <td class="dateContent"><span>-停課-</span></td>
-                    <td class="dateContent"></td>
-                    <td class="dateContent">動中覺察</td>
-                    <td class="dateContent"><p>當天開放預約功能整合</p></td>
-                    <td class="dateContent">基礎八隻串連</td>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td class="dateColor leftDashed">01/30</td>
                     <td class="dateColor">01/31</td>
                 </tr>
                 <tr>
-                    <td class="dateContent"></td>
+                    <td class="dateContent"><p>早上開放預約功能整合</p><br><p>下午開放預約功能整合</p><br><p>晚上開放預約功能整合</p></td>
                     <td class="dateContent"><span>-停課-</span></td>
-                </tr>
+                </tr> -->
             </table>
         </div>
+        <div class="classCaption">
+            <p>課程說明</p>
+            <hr class="pTitleHr">
+        </div>
         <div class="courseOrder">
-            <p>課程預約</p>
+            <p>當期課程</p>
             <hr class="pTitleHr">
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>動中覺察課程＿眼睛。拾回靈魂之窗</p>
-                    <hr>
+                    <div class="bigSmallTitleBox">
+                        <p><a href="class3.html">動中覺察課程</a></p>
+                        <p class="sTitle">眼睛。拾回靈魂之窗</p>
+                    </div>
+                    <div class="eyeOneContent">
+                        <p>每個人口中的瑜珈長的都不一樣，可以說運動是瑜珈、可以說
+                        連結是瑜珈、可以說解脫是瑜珈，現在大家喜歡把療癒掛在嘴
+                        邊，可以說瑜珈很療癒。那是因為聽到瑜珈兩字就覺得有運動
+                        ？有連結？有解脫？很療癒？還是在練習的過程中？還是在結
+                        束瑜珈練習之後？</p>
+                        <br>
+                        <p>２０２３年１１結束了為期一個月的瑜珈老師深度培訓，朝聖在我的瑜珈練習歷程
+                        中影響我至深的老師，帶著好奇與休假的期待，體驗不具瑜珈體位形式而深化『內
+                        在經驗』的八肢瑜珈。這場無論在體力與精力都頗挑戰的瑜珈練習，不下百次的自
+                        我質疑，我究竟為何而來？走錯教室？隨著物換星移，大家不僅年紀變了，思維與
+                        生命的方向也都變了，在我走進費登奎斯世界之後，在看待瑜珈兩字的意涵與當初
+                        〝自以為〞的瑜珈，不同了。</p>
+                        <br>
+                        <p>這不會是很令人吃驚的變化，只是淡淡的感傷。當然期望總是會失落，即使我已經
+                        越來越遠離所謂的『當代瑜珈』，試圖尋找我覺得的瑜珈的美好，當某天結束一個
+                        挑戰的體位法之後，我聽見老師幽默的語氣說「瑜珈的美好就是當你不再做瑜珈的
+                        時候」，我莞爾的連結到費登奎斯所說的不費力的品質，霎時，我有點了解了我老
+                        了，原來我再走進瑜珈教室，是為了圓一場許久以前所期許的夢，夢都是美好的。</p>
+                        <br>
+                        <p>這場深度培訓的期間，陸續碰見舊時光的瑜珈夥伴，從夥伴的口中我聽見我找到了
+                        自己的品牌（指的是我在教費登奎斯式瑜珈？），但有意思的是，費登奎斯世界的
+                        夥伴，要我不要放棄瑜珈（但，我現在主要是與人工作，也就是功能整合個案課程
+                        或私人課），兩種不同思惟之下，我開始感覺到混沌與慌亂「那，我在做什麼？」</p>
+                        <br>
+                        <p>費登奎斯博士說「如果妳知道妳在做什麼，就能做妳想做的」，不禁勾勒出在費登
+                        奎斯師訓時，培訓師曾說過「有些人在瑜珈課中教費登奎斯，也有些人在費登奎斯
+                        課中教瑜珈，但那些都不是費登奎斯」，這段話帶給我的影響如此深遠，幾近成為
+                        座右銘，瑜珈就是瑜珈，費登奎斯就是費登奎斯，費登奎斯與瑜珈兩者之間要有所
+                        區分，然後，漸漸的，我發現我就卡住了。</p>
+                        <br>
+                        <p>瑜珈激勵我超越界線的勇敢，而費登奎斯引領我讓事物不費力自然發生的膽量，兩
+                        者愈來愈交融，越來越成為一體......因為我，無法被分割。</p>
+                        <br>
+                        <p>瑜珈的我與費登奎斯的我，相互作用彼此，這或許是費登奎斯博士為什麼一直強調
+                        ，要把他教的方法運用在原本的專業上，讓既有的專業或存在的能力能夠更完善、
+                        更最佳化。於是，當我聽見「瑜珈的好處就是可以不用再做瑜珈開始」時，領悟到
+                        了『餘韻』與『自我意象』之間的關係。我想，我還是必須帶著繼續
+                        探索『費登奎斯』與『瑜珈』。</p>
+                    </div>
                 </div>
                 <div class="orderBoxContent">
                     <p>週六下午半日研習課</p>
@@ -115,26 +161,24 @@
                     <p>２０２３／１２／３０（已額滿）</p>
                     <p>其他周六還有名額喔！   ２０２４／１／１３、１／２０、２／２４ </p>
                     <p>上課時間：每周六下午１４：００～１７：００ （３小時）</p>
-                    <p>詳細課程內容與報名資訊 <a href="https://forms.gle/RjixhSJdJQ2rXmWm8">立 即 報 名</a></p>
+                    <p>點擊<span><a href="https://forms.gle/RjixhSJdJQ2rXmWm8"> 立即報名</a></span></p>
                 </div>
                 <hr class="bottomHr">
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>「基礎八肢串連」哈達瑜珈課</p>
-                    <hr class="twoHr">
+                    <p>基礎八肢串連 哈達瑜珈課</p>
                 </div>
                 <div class="orderBoxContent">
                     <p>課程日期：２０２３／１２／２２～２０２４／２／２３（２０２３／１２／２６停課）</p>
                     <p>課程時間：每週五晚間１９：３０～２１：００</p>
-                    <p>課程與報名資訊 <a href="https://forms.gle/JJgyJ5C12tSmf1hu7">立 即 報 名</a></p>
+                    <p>點擊<span><a href="https://forms.gle/RjixhSJdJQ2rXmWm8"> 立即報名</a></span></p>
                 </div>
                 <hr class="bottomHr">
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
                     <p>「當天開放功能整合預約」</p>
-                    <hr class="threeHr">
                 </div>
                 <div class="orderBoxContentAndImg">
                     <div class="orderBoxContent">
@@ -148,26 +192,24 @@
         </div>
     </div>
     <div class="footerContainerBox">
-        <div class="secondContainer">
-            <div class="footer">
-                <div class="imgBox">
-                    <img src="images/草寫簽名（白字）.png" alt="草寫簽名（白字）">
-                    <img src="images/地標search框.png" class="searchImg" alt="地標search框">
+        <div class="footer">
+            <div class="imgBox">
+                <img src="images/草寫簽名（白字）.png" alt="草寫簽名（白字）">
+                <img src="images/地標search框.png" class="searchImg" alt="地標search框">
+            </div>
+            <div class="informationBoxiconBox">
+                <div class="informationBox">
+                    <p>fayelin0222@gmail.com</p>
+                    <p>０９１９－４１３－３１３</p>
+                    <p>１１６６９台北市文山區景興路２７５巷１號</p>
+                    <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
+                    <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
+                    <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
                 </div>
-                <div class="informationBoxiconBox">
-                    <div class="informationBox">
-                        <p>fayelin0222@gmail.com</p>
-                        <p>０９１９－４１３－３１３</p>
-                        <p>１１６６９台北市文山區景興路２７５巷１號</p>
-                        <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
-                        <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
-                        <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
-                    </div>
-                    <div class="iconBox">
-                        <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
-                        <a href="https://www.instagram.com/feldenkraiswithfaye?igsh=ZnFveWNoYXF5NTBs"><img src="images/igIcon.png" alt="igIcon"></a>
-                        <a href="https://line.me/ti/p/-B73FCuMw-"><img src="images/lineIcon.png" alt="lineIcon"></a>
-                    </div>
+                <div class="iconBox">
+                    <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
+                    <a href="https://www.instagram.com/feldenkraiswithfaye?igsh=ZnFveWNoYXF5NTBs"><img src="images/igIcon.png" alt="igIcon"></a>
+                    <a href="https://line.me/ti/p/-B73FCuMw-"><img src="images/lineIcon.png" alt="lineIcon"></a>
                 </div>
             </div>
         </div>
