--- a/class1.html
+++ b/class1.html
@@ -14,12 +14,12 @@
                 <a href="index.html">和非.費登奎斯＆瑜伽</a>
             </h1>
         </div>
-        <i class="fa-solid fa-bars hamburgerIcon"></i>
+        <!-- <i class="fa-solid fa-bars hamburgerIcon"></i> -->
         <div class="subTitle">
             <span class="pageColor"><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
-            <span><a href="teacher.html">師資介紹</a></span>
-            <span><a href="classOrder.html">功能整合預約／課程預約</a></span>
+            <span><a href="teacher.html">關於我</a></span>
+            <span><a href="classOrder.html">個人化課程預約／課程報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
     </div>
@@ -90,26 +90,24 @@
         </div>
     </div>
     <div class="footerContainerBox">
-        <div class="secondContainer">
-            <div class="footer">
-                <div class="imgBox">
-                    <img src="images/草寫簽名（白字）.png" alt="草寫簽名（白字）">
-                    <img src="images/地標search框.png" class="searchImg" alt="地標search框">
+        <div class="footer">
+            <div class="imgBox">
+                <img src="images/草寫簽名（白字）.png" alt="草寫簽名（白字）">
+                <img src="images/地標search框.png" class="searchImg" alt="地標search框">
+            </div>
+            <div class="informationBoxiconBox">
+                <div class="informationBox">
+                    <p>fayelin0222@gmail.com</p>
+                    <p>０９１９－４１３－３１３</p>
+                    <p>１１６６９台北市文山區景興路２７５巷１號</p>
+                    <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
+                    <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
+                    <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
                 </div>
-                <div class="informationBoxiconBox">
-                    <div class="informationBox">
-                        <p>fayelin0222@gmail.com</p>
-                        <p>０９１９－４１３－３１３</p>
-                        <p>１１６６９台北市文山區景興路２７５巷１號</p>
-                        <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
-                        <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
-                        <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
-                    </div>
-                    <div class="iconBox">
-                        <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
-                        <a href="https://www.instagram.com/feldenkraiswithfaye?igsh=ZnFveWNoYXF5NTBs"><img src="images/igIcon.png" alt="igIcon"></a>
-                        <a href="https://line.me/ti/p/-B73FCuMw-"><img src="images/lineIcon.png" alt="lineIcon"></a>
-                    </div>
+                <div class="iconBox">
+                    <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
+                    <a href="https://www.instagram.com/feldenkraiswithfaye?igsh=ZnFveWNoYXF5NTBs"><img src="images/igIcon.png" alt="igIcon"></a>
+                    <a href="https://line.me/ti/p/-B73FCuMw-"><img src="images/lineIcon.png" alt="lineIcon"></a>
                 </div>
             </div>
         </div>
