--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
                     <a href="index.html">和非.費登奎斯＆瑜伽</a>
                 </h1>
             </div>
-            <i class="fa-solid fa-bars hamburgerIcon"></i>
             <div class="subTitle">
                 <span><a href="class1.html">課程介紹</a></span>
                 <span><a href="share.html">旅程分享</a></span>
-                <span><a href="teacher.html">師資介紹</a></span>
-                <span><a href="classOrder.html">功能整合預約／課程預約</a></span>
+                <span><a href="teacher.html">關於我</a></span>
+                <span><a href="classOrder.html">個人化課程預約／課程報名</a></span>
                 <span class="pageColor"><a href="index.html">諮詢／體驗</a></span>
             </div>
         </div>
+        <i class="fa-solid fa-bars hamburgerIcon"></i>
         <div class="secondContainerBox">
-            <div class="secondContainer">
+            <div class="ContainerBc128">
                 <div class="indexPicBox">
-                    <img src="images/橫草寫簽名.png" class="signImg" alt="橫草寫簽名">
+                    <img src="images/草寫簽名一排.png" class="signImg" alt="橫草寫簽名">
                     <img src="images/indexBig.png" class="indexBig" alt="功能整合照片">
                     <div class="qrCodeBox">
                         <p class="orderTitle">預約體驗 ／ 課程洽詢</p>
