--- a/classOrder.html
+++ b/classOrder.html
@@ -19,7 +19,7 @@
             <span><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span class="pageColor"><a href="classOrder.html">個人化課程預約／課程報名</a></span>
+            <span class="pageColor"><a href="classOrder.html">課程預約／報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
     </div>
@@ -28,19 +28,19 @@
             <p>九月份開放預約時段</p>
             <hr class="pTitleHr">
             <table>
-                <tr>
+                <!-- <tr>
                     <td class="dayBorder">ＴＵＥ（二）</td>
                     <td class="dayBorder">ＷＥＤ（三）</td>
                     <td class="dayBorder">ＴＨＵ（四）</td>
                     <td class="dayBorder">ＦＲＩ（五）</td>
                     <td class="dayBorder">ＳＡＴ（六）</td>
-                </tr>
+                </tr> -->
                 <tr>
-                    <td class="topDateColor">09/03</td>
-                    <td class="topDateColor">09/04</td>
-                    <td class="topDateColor">09/05</td>
-                    <td class="topDateColor">09/06</td>
-                    <td class="topDateColor">09/07</td>
+                    <td class="topDateColor">ＴＵＥ（二）</td>
+                    <td class="topDateColor">ＷＥＤ（三）</td>
+                    <td class="topDateColor">ＴＨＵ（四）</td>
+                    <td class="topDateColor">ＦＲＩ（五）</td>
+                    <td class="topDateColor">ＳＡＴ（六）</td>
                 </tr>
                 <tr>
                     <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
@@ -49,7 +49,7 @@
                     <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
                     <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td class="dateColor leftDashed">09/10</td>
                     <td class="dateColor">09/11</td>
                     <td class="dateColor">09/12</td>
@@ -90,7 +90,7 @@
                     <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
                     <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
                     <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
-                </tr>
+                </tr> -->
                 <!-- <tr>
                     <td class="dateColor leftDashed">01/30</td>
                     <td class="dateColor">01/31</td>
@@ -167,7 +167,7 @@
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>基礎八肢串連 哈達瑜珈課</p>
+                    <p>費登奎斯瑜伽</p>
                 </div>
                 <div class="orderBoxContent">
                     <p>課程日期：２０２３／１２／２２～２０２４／２／２３（２０２３／１２／２６停課）</p>
