--- a/share.html
+++ b/share.html
@@ -19,7 +19,7 @@
             <span><a href="class1.html">課程介紹</a></span>
             <span class="pageColor"><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span><a href="classOrder.html">個人化課程預約／課程報名</a></span>
+            <span><a href="classOrder.html">課程預約／報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
     </div>
