--- a/teacher.html
+++ b/teacher.html
@@ -14,7 +14,6 @@
                 <a href="index.html">和非.費登奎斯＆瑜伽</a>
             </h1>
         </div>
-        <!-- <i class="fa-solid fa-bars hamburgerIcon"></i> -->
         <div class="subTitle">
             <span><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
@@ -22,6 +21,7 @@
             <span><a href="classOrder.html">課程預約／報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
+        <i class="fa-solid fa-bars"></i>
     </div>
     <div class="whiteSecondContainer">
         <div class="introduceTitle">
