--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span><a href="classOrder.html">課程預約／報名</a></span>
                 <span class="pageColor noBottomDashed"><a href="index.html">諮詢／體驗</a></span>
             </div>
-            <i class="fa-solid fa-bars"></i>
+            <!-- <i class="fa-solid fa-bars"></i> -->
         </div>
         <div class="secondContainerBox">
             <div class="ContainerBc128">
@@ -46,8 +46,7 @@
                     </div>
                     <div class="noticeContent">
                         <p class="noticeContentOne">・請經由上述的課程介紹，主述上課的意圖，也許與目前的身心狀況或疾病有關、對身體的認識或探索。</p>
-                        <p>・課程通常在特別為此課程設計的Feldenkrais摺疊桌（床）上進行，以仰臥、側躺、趴臥、或坐姿或</p>
-                        <span>站姿等等，依當天實際上課狀況來決定要如何進行。</span>
+                        <p>・課程通常在特別為此課程設計的Feldenkrais摺疊桌（床）上進行，以仰臥、側躺、趴臥、或坐姿或站姿等等，依當天實際上課狀況來決定要如何進行。</p>
                         <p>・著方便動作之服裝，盡量選擇寬鬆有彈性的舒服衣褲，女生請著運動內衣，避免鋼圈胸罩。</p>
                     </div>
                     <hr class="downLine">
