--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="headerIndex">
             <div class="title">
                 <h1>
                     <a href="index.html">和非.費登奎斯＆瑜伽</a>
@@ -23,7 +23,7 @@
                 <span><a href="classOrder.html">課程預約／報名</a></span>
                 <span class="pageColor noBottomDashed"><a href="index.html">諮詢／體驗</a></span>
             </div>
-            <i class="fa-solid fa-bars"></i>
+            <!-- <i class="fa-solid fa-bars"></i> -->
         </div>
         <div class="secondContainerBox">
             <div class="ContainerBc128">
