--- a/class2.html
+++ b/class2.html
@@ -21,7 +21,7 @@
             <span><a href="classOrder.html">課程預約／報名</a></span>
             <span><a href="index.html">諮詢／體驗</a></span>
         </div>
-        <i class="fa-solid fa-bars"></i>
+        <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
     <div class="classBoxContainer">
         <div class="classOneBox">
