--- a/class2.html
+++ b/class2.html
@@ -18,8 +18,8 @@
             <span class="pageColor"><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span><a href="classOrder.html">課程預約／報名</a></span>
-            <span><a href="index.html">諮詢／體驗</a></span>
+            <span><a href="classOrder.html">課程資訊／報名</a></span>
+            <span><a href="index.html">諮詢／預約</a></span>
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
@@ -27,12 +27,12 @@
         <div class="classOneBox">
             <p>課程介紹</p>
             <hr class="pTitleHr">
-            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span class="color128">費登奎斯瑜伽</span></a>｜<a href="class3.html"><span>動中覺察</span></a>｜</p>
+            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span class="color128">費登奎斯式</span></a>｜<a href="class3.html"><span>動中覺察</span></a>｜</p>
             <div class="picContainer">
                 <div class="imgText">
                     <img class="classTwoImg" src="images/費登奎斯瑜珈照片1.jpg" alt="費登奎斯瑜珈照片">
                     <div class="imgSlogon">
-                        <p class="OneSlogonTitle">費登奎斯式瑜珈</p>
+                        <p class="OneSlogonTitle">費登奎斯式</p>
                         <span class="OneSlogonSmallTextOne">哈達串聯基礎瑜珈</span>
                     </div>
                 </div>
