--- a/class3.html
+++ b/class3.html
@@ -18,8 +18,8 @@
             <span class="pageColor"><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span><a href="classOrder.html">課程預約／報名</a></span>
-            <span><a href="index.html">諮詢／體驗</a></span>
+            <span><a href="classOrder.html">課程資訊／報名</a></span>
+            <span><a href="index.html">諮詢／預約</a></span>
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
@@ -27,7 +27,7 @@
         <div class="classOneBox">
             <p>課程介紹</p>
             <hr class="pTitleHr">
-            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span>費登奎斯瑜伽</span></a>｜<a href="class3.html"><span class="color128">動中覺察</span></a>｜</p>
+            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span>費登奎斯式</span></a>｜<a href="class3.html"><span class="color128">動中覺察</span></a>｜</p>
             <div class="picContainer">
                 <div class="imgText">
                     <img src="images/動中覺察圖.jpeg" alt="動中覺察圖">
