--- a/classOrder.html
+++ b/classOrder.html
@@ -18,95 +18,14 @@
             <span><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span class="pageColor"><a href="classOrder.html">課程預約／報名</a></span>
-            <span><a href="index.html">諮詢／體驗</a></span>
+            <span class="pageColor"><a href="classOrder.html">課程資訊／報名</a></span>
+            <span><a href="index.html">諮詢／預約</a></span>
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
     <div class="classOrderContainer">
-        <div class="schoolTimetable">
-            <p>九月份開放預約時段</p>
-            <hr class="pTitleHr">
-            <table>
-                <!-- <tr>
-                    <td class="dayBorder">ＴＵＥ（二）</td>
-                    <td class="dayBorder">ＷＥＤ（三）</td>
-                    <td class="dayBorder">ＴＨＵ（四）</td>
-                    <td class="dayBorder">ＦＲＩ（五）</td>
-                    <td class="dayBorder">ＳＡＴ（六）</td>
-                </tr> -->
-                <tr>
-                    <td class="topDateColor">ＴＵＥ（二）</td>
-                    <td class="topDateColor">ＷＥＤ（三）</td>
-                    <td class="topDateColor">ＴＨＵ（四）</td>
-                    <td class="topDateColor">ＦＲＩ（五）</td>
-                    <td class="topDateColor">ＳＡＴ（六）</td>
-                </tr>
-                <tr>
-                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
-                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
-                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
-                </tr>
-                <!-- <tr>
-                    <td class="dateColor leftDashed">09/10</td>
-                    <td class="dateColor">09/11</td>
-                    <td class="dateColor">09/12</td>
-                    <td class="dateColor">09/13</td>
-                    <td class="dateColor">09/14</td>
-                </tr>
-                <tr>
-                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
-                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
-                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
-                </tr>
-                <tr>
-                    <td class="dateColor leftDashed">09/17</td>
-                    <td class="dateColor">09/18</td>
-                    <td class="dateColor">09/19</td>
-                    <td class="dateColor">09/20</td>
-                    <td class="dateColor">09/21</td>
-                </tr>
-                <tr>
-                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
-                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
-                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
-                </tr>
-                <tr>
-                    <td class="dateColor leftDashed">09/24</td>
-                    <td class="dateColor">09/25</td>
-                    <td class="dateColor">09/26</td>
-                    <td class="dateColor">09/27</td>
-                    <td class="dateColor">09/28</td>
-                </tr>
-                <tr>
-                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
-                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
-                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
-                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
-                </tr> -->
-                <!-- <tr>
-                    <td class="dateColor leftDashed">01/30</td>
-                    <td class="dateColor">01/31</td>
-                </tr>
-                <tr>
-                    <td class="dateContent"><p>早上開放預約功能整合</p><br><p>下午開放預約功能整合</p><br><p>晚上開放預約功能整合</p></td>
-                    <td class="dateContent"><span>-停課-</span></td>
-                </tr> -->
-            </table>
-        </div>
-        <div class="classCaption">
-            <p>課程說明</p>
-            <hr class="pTitleHr">
-        </div>
         <div class="courseOrder">
-            <p>當期課程</p>
+            <p>課程報名</p>
             <hr class="pTitleHr">
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
@@ -167,7 +86,7 @@
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>費登奎斯瑜伽</p>
+                    <p>費登奎斯式</p>
                 </div>
                 <div class="orderBoxContent">
                     <p>課程日期：２０２３／１２／２２～２０２４／２／２３（２０２３／１２／２６停課）</p>
@@ -178,17 +97,115 @@
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>「當天開放功能整合預約」</p>
+                    <p>「個人課程預約」</p>
                 </div>
                 <div class="orderBoxContentAndImg">
-                    <div class="orderBoxContent">
-                        <p>課程時間：每週五晚間  ０９：３０～２１：００</p>
-                        <p>ＬＩＮＥ報名 <a href="https://line.me/ti/p/-B73FCuMw-">＞ 請點擊老師  line  連結 ＜</a>       或  掃描ＱＲcode </p>
-                    </div>
                     <img src="images/lineQRcode.png" alt="lineQRcode">
+                    <div class="orderBoxContent">
+                        <p>掃描ＱＲcode  或<a href="index.html">ＬＩＮＥ報名</a></p>
+                    </div>
                 </div>
                 <hr class="bottomHr">
             </div>
+        </div>
+        <div class="schoolTimetable">
+            <p>九月份開放預約時段</p>
+            <hr class="pTitleHr">
+            <table>
+                <!-- <tr>
+                    <td class="dayBorder">ＴＵＥ（二）</td>
+                    <td class="dayBorder">ＷＥＤ（三）</td>
+                    <td class="dayBorder">ＴＨＵ（四）</td>
+                    <td class="dayBorder">ＦＲＩ（五）</td>
+                    <td class="dayBorder">ＳＡＴ（六）</td>
+                </tr> -->
+                <tr>
+                    <td class="topDateColor"></td>
+                    <td class="topDateColor">ＴＵＥ（二）</td>
+                    <td class="topDateColor">ＷＥＤ（三）</td>
+                    <td class="topDateColor">ＴＨＵ（四）</td>
+                    <td class="topDateColor">ＦＲＩ（五）</td>
+                    <td class="topDateColor">ＳＡＴ（六）</td>
+                </tr>
+                <tr>
+                    <td class="topDateColor">早上</td>
+                    <td class="dateContent"><span>私人課</span></td>
+                    <td class="dateContent"><span></span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span>團體課-費登奎斯瑜珈</span></td>
+                    <td class="dateContent"><span>團體課-動中覺察</span></td>
+                </tr>
+                <tr>
+                    <td class="topDateColor">下午</td>
+                    <td class="dateContent"><span>團體課-費登奎斯瑜珈</span></td>
+                    <td class="dateContent"><span>個人化課程</span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                </tr>
+                <tr>
+                    <td class="topDateColor">晚上</td>
+                    <td class="dateContent"><span></span></td>
+                    <td class="dateContent"><span>團體課-動中覺察</span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span></span></td>
+                </tr>
+                <!-- <tr>
+                    <td class="dateColor leftDashed">09/10</td>
+                    <td class="dateColor">09/11</td>
+                    <td class="dateColor">09/12</td>
+                    <td class="dateColor">09/13</td>
+                    <td class="dateColor">09/14</td>
+                </tr>
+                <tr>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
+                </tr>
+                <tr>
+                    <td class="dateColor leftDashed">09/17</td>
+                    <td class="dateColor">09/18</td>
+                    <td class="dateColor">09/19</td>
+                    <td class="dateColor">09/20</td>
+                    <td class="dateColor">09/21</td>
+                </tr>
+                <tr>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
+                </tr>
+                <tr>
+                    <td class="dateColor leftDashed">09/24</td>
+                    <td class="dateColor">09/25</td>
+                    <td class="dateColor">09/26</td>
+                    <td class="dateColor">09/27</td>
+                    <td class="dateColor">09/28</td>
+                </tr>
+                <tr>
+                    <td class="dateContent"><span>私人課</span><br><span>團體課 - 費登奎斯瑜伽</span><br></td>
+                    <td class="dateContent"><br><span>個人化課程</span><br><span>團體課 - 動中覺察</span></td>
+                    <td class="dateContent"><p>早上開放預約個人化課程</p><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 費登奎斯瑜伽</span><br><p>下午開放預約個人化課程</p><br><p>晚上開放預約個人化課程</p></td>
+                    <td class="dateContent"><span>團體課 - 動中覺察</span><br><p>下午開放預約個人化課程</p><br></td>
+                </tr> -->
+                <!-- <tr>
+                    <td class="dateColor leftDashed">01/30</td>
+                    <td class="dateColor">01/31</td>
+                </tr>
+                <tr>
+                    <td class="dateContent"><p>早上開放預約功能整合</p><br><p>下午開放預約功能整合</p><br><p>晚上開放預約功能整合</p></td>
+                    <td class="dateContent"><span>-停課-</span></td>
+                </tr> -->
+            </table>
+        </div>
+        <div class="classCaption">
+            <p>課程說明</p>
+            <hr class="pTitleHr">
         </div>
     </div>
     <div class="footerContainerBox">
