--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <span><a href="class1.html">課程介紹</a></span>
                 <span><a href="share.html">旅程分享</a></span>
                 <span><a href="teacher.html">關於我</a></span>
-                <span><a href="classOrder.html">課程預約／報名</a></span>
-                <span class="pageColor noBottomDashed"><a href="index.html">諮詢／體驗</a></span>
+                <span><a href="classOrder.html">課程資訊／報名</a></span>
+                <span class="pageColor noBottomDashed"><a href="index.html">諮詢／預約</a></span>
             </div>
             <!-- <i class="fa-solid fa-bars"></i> -->
         </div>
@@ -39,7 +39,7 @@
                         <p class="lineidText">ＬｉｎｅＩＤ：dolessfaye</p>
                     </div>
                 </div>
-                <div class="notice">
+                <!-- <div class="notice">
                     <div class="noticeTitle">
                         <span>注意事項</span>
                         <hr class="upLine">
@@ -50,7 +50,7 @@
                         <p>・著方便動作之服裝，盡量選擇寬鬆有彈性的舒服衣褲，女生請著運動內衣，避免鋼圈胸罩。</p>
                     </div>
                     <hr class="downLine">
-                </div>
+                </div> -->
                 <div class="mapBox">
                     <img src="images/教室路線圖.png" alt="教室路線圖">
                 </div>
