--- a/share.html
+++ b/share.html
@@ -18,8 +18,8 @@
             <span><a href="class1.html">課程介紹</a></span>
             <span class="pageColor"><a href="share.html">旅程分享</a></span>
             <span><a href="teacher.html">關於我</a></span>
-            <span><a href="classOrder.html">課程預約／報名</a></span>
-            <span><a href="index.html">諮詢／體驗</a></span>
+            <span><a href="classOrder.html">課程資訊／報名</a></span>
+            <span><a href="index.html">諮詢／預約</a></span>
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
@@ -78,7 +78,7 @@
             </div>
             <div class="contentTwo">
                 <img src="images/費登奎斯的特色分享圖.jpeg" alt="費登奎斯的特色分享圖">
-                <p>費登奎斯特的特色</p>
+                <p>費登奎斯式的特色</p>
                 <hr class="contentHr">
                 <hr class="contentSpace">
                 <div class="contentBox">
