--- a/teacher.html
+++ b/teacher.html
@@ -18,8 +18,8 @@
             <span><a href="class1.html">課程介紹</a></span>
             <span><a href="share.html">旅程分享</a></span>
             <span class="pageColor"><a href="teacher.html">關於我</a></span>
-            <span><a href="classOrder.html">課程預約／報名</a></span>
-            <span><a href="index.html">諮詢／體驗</a></span>
+            <span><a href="classOrder.html">課程資訊／報名</a></span>
+            <span><a href="index.html">諮詢／預約</a></span>
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
